--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "io.insert-koin:koin-core:3.3.3"
+    implementation "io.insert-koin:koin-androidx-workmanager:3.3.3"
+    implementation "androidx.room:room-runtime:2.5.0"
 }
