--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    // TODO: Use variables instead of raw version numbers
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
